--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Testes automatizados do app web banco",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cypress run",
+    "cy:headed":"cypress run --headed",
+    "cy:open": "cypress open"
   },
   "repository": {
     "type": "git",
