--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Testes automatizados do app web banco",
   "main": "index.js",
   "scripts": {
-    "test": "cypress run --env URL=http://localhost:4000",
+    "test": "cypress run",
     "test-prod": "cypress run --env URL=http://www.juliolima.com.br",
     "test-qa": "cypress run --env URL=qa-enviroment.juliolima.com.br",
 
